fixed hover hero button and text alignment

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -42,17 +42,21 @@
 }
 
 .hero-section .btn-primary {
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   border-radius: 6px;
-  padding: 10px 24px;
+  padding: 9px 23px;
   width: 100%;
-  height: 44px;
   background: #fff;
   font-family: 'Mulish', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   color: #000;
+  text-align: center;
+}
+.hero-section .btn-primary:hover {
+  background-color: #fff;
+  border-color: #dcc110;
 }
 
 @media screen and (min-width: 768px) {
@@ -67,7 +71,7 @@
   }
   .hero-section .btn-primary {
     background: #dcc110;
-    border: 1px solid #dcc110;
+    border: 2px solid #dcc110;
     width: 161px;
   }
 }
